// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PersistentNotification component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="el-intent-primary el-persistent-notification"
    role="status"
  >
    <div
      class="el-pn-icon"
      data-testid="close-icon"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
        />
      </svg>
    </div>
    <div
      aria-live="polite"
      class="el-pn-content"
    >
      I am notification
    </div>
  </div>
</DocumentFragment>
`;

exports[`PersistentNotification component > should match a snapshot for an inline notification 1`] = `
<DocumentFragment>
  <div
    class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
    role="status"
  >
    <div
      class="el-pn-icon"
      data-testid="close-icon"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
        />
      </svg>
    </div>
    <div
      aria-live="polite"
      class="el-pn-content"
    >
      I am notification
    </div>
  </div>
</DocumentFragment>
`;

exports[`PersistentNotification component > should match a snapshot when expanded 1`] = `
<DocumentFragment>
  <div
    class="el-intent-primary el-is-active el-persistent-notification"
    role="status"
  >
    <div
      class="el-pn-icon"
      data-testid="close-icon"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
        />
      </svg>
    </div>
    <div
      aria-live="polite"
      class="el-pn-content"
    >
      I am notification
    </div>
  </div>
</DocumentFragment>
`;

exports[`PersistentNotification component > should match a snapshot when given an intent 1`] = `
<DocumentFragment>
  <div
    class="el-intent-primary el-persistent-notification"
    role="status"
  >
    <div
      class="el-pn-icon"
      data-testid="close-icon"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
        />
      </svg>
    </div>
    <div
      aria-live="polite"
      class="el-pn-content"
    >
      I am notification
    </div>
  </div>
</DocumentFragment>
`;
